Fixes overflowing side image, adds icon to continue shopping button, aligns footer line to bottom correctly

--- a/less/widget-button.less
+++ b/less/widget-button.less
@@ -161,7 +161,8 @@ span.remove-text {
 
 .button.ecomproduct__button,
 .button.ecombasket__basket-toggle,
-.button.ecombasket__button {
+.button.ecombasket__button,
+.button.ecombasketsummary__continue-shopping {
 	&:before {
 		content: "\f07a";
 		-webkit-transform-origin: 43% 86%;
